# ExcelQA

./: .env.example  .gitignore  EC2_DEPLOYMENT.md  README.md  SETUP_GUIDE.md  SIMPLE_SETUP.md  main.py  pyproject.toml  requirements.txt  start.sh
static/: index.html  login.html  script.js  styles.css
